compiler/fir/analysis-tests/testData/resolve/problems/primaryParameterWithoutReturnType.kt
data class A(val x<!SYNTAX!><!>) {}
